Fixed button mobile styles

--- a/#sourse/scss/style.scss
+++ b/#sourse/scss/style.scss
@@ -73,6 +73,7 @@ body{
     }
 }
 .button-area {
+    
 }
 
 #generate {
@@ -83,7 +84,12 @@ body{
     padding: 0.5rem;
     border-radius: 0.5rem;
     box-shadow: 0 0.1rem 0.6rem 0.1rem #000000;
-    &:hover{
+    &:active{
         background-color: #000000;
+    }
+    @media (min-width: 767.98px) {
+        &:hover{
+            background-color: #000000;
+        }
     }
 }
